còn bug đăng ký lịch làm